[project]
name = "FlashRL"
version = "0.1.0"
description = "FlashSAC training framework for IsaacLab"
readme = "README.md"
requires-python = ">=3.11, <3.12"
dependencies = [
    "hydra-core",
    "omegaconf",
    "tqdm",
    "numpy",
    "wandb==0.23",
    "tensorboard",
    "pillow",
    "gymnasium>=1.1.1",
    "torch==2.9.1",
]

[project.optional-dependencies]
isaaclab = [
    "isaacsim[all,extscache]==5.1.0",
    "isaaclab[isaacsim]==2.3.0",
]

[tool.uv]
override-dependencies = [
    "pywin32==306 ; sys_platform == 'win32'",
    "nvidia-cudnn-cu12>=9.8.0",
    "torch==2.9.1",  # https://github.com/isaac-sim/IsaacLab/issues/4371 (required for Blackwell GPUs)
    "torchvision==0.24.1",  # https://github.com/isaac-sim/IsaacLab/issues/4371
    "flatdict==4.0.0",  # https://github.com/isaac-sim/IsaacLab/issues/4577
]

[tool.uv.sources]
isaacsim = { index = "nvidia" }
isaaclab = { index = "nvidia" }

[[tool.uv.index]]
name = "nvidia"
url = "https://pypi.nvidia.com"

[dependency-groups]
dev = [
    "black>=25.1.0",
    "mypy>=1.16.1",
    "ruff>=0.12.1",
    "ipdb",
]

[tool.ruff]
exclude = [".git", ".mypy_cache", ".ruff_cache", ".venv"]
line-length = 120
indent-width = 4
target-version = "py311"
unsafe-fixes = true

[tool.ruff.lint]
select = ["E4", "E5", "E7", "E9", "F", "UP006", "I", "W"]
ignore = ["F403"]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

[tool.mypy]
strict = true
strict_optional = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
